1. fixed code scrollbar 2. add a new post

--- a/dev/sass/common.scss
+++ b/dev/sass/common.scss
@@ -539,7 +539,7 @@
     padding: 0 0 32px;
     .highlight {
         margin: 0 0 16px;
-        overflow: scroll;
+        // overflow: scroll;
     }
     img {
         transition: .3s;
